fix: fixed sections

--- a/about-company.html
+++ b/about-company.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta name="format-detection" content="telephone=no" />
+    <meta name="format-detection" content="telephone=no" />
     <title>О "СИГМЕ"</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -254,7 +254,7 @@
       <nav class="mobile__nav">
         <a href="index.html" class="mobile__link">Главная</a>
         <a href="about-company.html" class="mobile__link">О компании</a>
-        <a href="#" class="mobile__link">Наши технологии</a>
+        <a href="technologies.html" class="mobile__link">Наши технологии</a>
         <a href="contacts.html" class="mobile__link">Контакты</a>
       </nav>
     </div>
