--- a/method-grp_sat.html
+++ b/method-grp_sat.html
@@ -398,8 +398,8 @@
       <nav class="mobile__nav">
         <a href="index.html" class="mobile__link">Главная</a>
         <a href="about-company.html" class="mobile__link">О компании</a>
-        <a href="method-grp.html" class="mobile__link">Наши технологии</a>
-        <a href="# " class="mobile__link">Контакты</a>
+        <a href="technologies.html" class="mobile__link">Наши технологии</a>
+        <a href="contacts.html" class="mobile__link">Контакты</a>
       </nav>
     </div>
 
