--- a/method-svan.html
+++ b/method-svan.html
@@ -35,7 +35,7 @@
         </a>
 
         <nav class="navbar">
-         <ul class="navbar__list">
+          <ul class="navbar__list">
             <li class="navbar__item">
               <a href="index.html" class="navbar__link">Главная</a>
             </li>
@@ -91,10 +91,10 @@
     </nav>
     <!-- /.breadcrumb-->
 
-    <section class="method-msi">
-      <div class="method-msi__container">
-        <h3 class="method-msi__title">Мониторинг СВАН</h3>
-        <p class="method-msi__text">
+    <section class="method-svan">
+      <div class="method-svan__container">
+        <h3 class="method-svan__title">Мониторинг СВАН</h3>
+        <p class="method-svan__text">
           Технология сейсмического волнового анализа (СВАН) является
           разновидностью пассивной сейсморазведки, в зарубежной литературе она
           описывается как Low Frequency Passive Seismic Technology. Последняя,
@@ -108,25 +108,25 @@
           результат свидетельствовал о принципиальной возможности использования
           данного явления для прямых поисков залежей нефти и газа.
         </p>
-        <div class="method-msi__image-wrapper">
+        <div class="method-svan__image-wrapper">
           <img
-            class="method-msi__spectrums"
-            src="img/msi-method__1.png"
+            class="method-svan__spectrums"
+            src="img/msi-method__1.jpg"
             alt=""
           />
           <img
-            class="method-msi__spectrums"
-            src="img/msi-method__2.png"
+            class="method-svan__spectrums"
+            src="img/msi-method__2.jpg"
             alt=""
           />
         </div>
-        <span class="method-msi__comment"
+        <span class="method-svan__comment"
           >Сравнение модельных спектров со спектрами реальных скважин</span
         >
-        <p class="method-msi__text">
+        <p class="method-svan__text">
           Природа микросейсм разнообразна, но в их составе имеются
           <a
-            class="method-msi__link"
+            class="method-svan__link"
             target="_blank"
             href="https://ru.wikipedia.org/wiki/%D0%A1%D1%82%D0%BE%D1%8F%D1%87%D0%B0%D1%8F_%D0%B2%D0%BE%D0%BB%D0%BD%D0%B0"
             >стоячие волны</a
@@ -138,13 +138,13 @@
           геологической среде формируются многократные отражения внутри слоев, и
           их интерференция приводит к формированию стоячих волн.
         </p>
-        <div class="method-msi__image-wrapper">
-          <img class="method-msi__gif" src="img/Standing_wave_2.gif" alt="" />
+        <div class="method-svan__image-wrapper">
+          <img class="method-__gif" src="img/Standing_wave_2.gif" alt="" />
         </div>
-        <span class="method-msi__comment"
+        <span class="method-svan__comment"
           >Пример стоячей волны (черная линия)</span
         >
-        <p class="method-msi__text">
+        <p class="method-svan__text">
           Использование результатов моделирования, априорных данных о
           месторождении и анализ реальных записей микросейсмического волнового
           поля дают возможность построения карт энергии микросейсмической
@@ -155,38 +155,38 @@
           технологию (патент на изобретение № 2386984).
         </p>
 
-        <ul class="method-msi__list">
-          <h4 class="method-msi__list-title">Решаемые задачи</h4>
-          <li class="method-msi__item">
+        <ul class="method-svan__list">
+          <h4 class="method-svan__list-title">Решаемые задачи</h4>
+          <li class="method-svan__item">
             определение зон с высокой плотностью активных запасов и зон со
             слабо-дренируемыми запасами нефти;
           </li>
-          <li class="method-msi__item">
+          <li class="method-svan__item">
             детализация геологического строения и фильтрационно-емкостных
             свойств пласта краевых зон залежи для оценки перспектив и
             целесообразности бурения проектных скважин
           </li>
         </ul>
 
-        <div class="method-msi__results">
-          <h4 class="method-msi__list-title">Результаты</h4>
-          <div class="swiper-container method-msi__swiper">
+        <div class="method-svan__results">
+          <h4 class="method-svan__list-title">Результаты</h4>
+          <div class="swiper-container method-svan__swiper">
             <!-- Additional required wrapper -->
-            <div class="swiper-wrapper method-msi__wrapper">
+            <div class="swiper-wrapper method-svan__wrapper">
               <!-- Slides -->
-              <div class="swiper-slide method-msi__slide">
-                <div class="method-msi__images">
+              <div class="swiper-slide method-svan__slide">
+                <div class="method-svan__images">
                   <img
-                    class="method-msi__image"
+                    class="method-svan__image"
                     src="img/msi-method__swiper-L.png"
                     alt=""
                   />
                 </div>
-                <div class="method-msi__text-wrapper">
-                  <h4 class="method-msi__text-title">
+                <div class="method-svan__text-wrapper">
+                  <h4 class="method-svan__text-title">
                     Карта энергии микросейсмического волнового поля для пласта L
                   </h4>
-                  <p class="method-msi__description">
+                  <p class="method-svan__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Autem vitae consequuntur, dolorum, est distinctio
                     accusantium voluptas neque quas quae alias magni odio
@@ -197,20 +197,20 @@
                   </p>
                 </div>
               </div>
-              <div class="swiper-slide method-msi__slide">
-                <div class="method-msi__images">
+              <div class="swiper-slide method-svan__slide">
+                <div class="method-svan__images">
                   <img
-                    class="method-msi__image"
+                    class="method-svan__image"
                     src="img/msi-method__swiper-III.png"
                     alt=""
                   />
                 </div>
-                <div class="method-msi__text-wrapper">
-                  <h4 class="method-msi__text-title">
+                <div class="method-svan__text-wrapper">
+                  <h4 class="method-svan__text-title">
                     Карта энергии микросейсмического волнового поля для пласта
                     III, IV
                   </h4>
-                  <p class="method-msi__description">
+                  <p class="method-svan__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Autem vitae consequuntur, dolorum, est distinctio
                     accusantium voluptas neque quas quae alias magni odio
@@ -221,20 +221,20 @@
                   </p>
                 </div>
               </div>
-              <div class="swiper-slide method-msi__slide">
-                <div class="method-msi__images">
+              <div class="swiper-slide method-svan__slide">
+                <div class="method-svan__images">
                   <img
-                    class="method-msi__image"
+                    class="method-svan__image"
                     src="img/msi-method__swiper-XI.png"
                     alt=""
                   />
                 </div>
-                <div class="method-msi__text-wrapper">
-                  <h4 class="method-msi__text-title">
+                <div class="method-svan__text-wrapper">
+                  <h4 class="method-svan__text-title">
                     Карта энергии микросейсмического волнового поля для пласта
                     XI, XII
                   </h4>
-                  <p class="method-msi__description">
+                  <p class="method-svan__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Autem vitae consequuntur, dolorum, est distinctio
                     accusantium voluptas neque quas quae alias magni odio
@@ -245,20 +245,20 @@
                   </p>
                 </div>
               </div>
-              <div class="swiper-slide method-msi__slide">
-                <div class="method-msi__images">
+              <div class="swiper-slide method-svan__slide">
+                <div class="method-svan__images">
                   <img
-                    class="method-msi__image"
+                    class="method-svan__image"
                     src="img/msi-method__swiper-XXIII.png"
                     alt=""
                   />
                 </div>
-                <div class="method-msi__text-wrapper">
-                  <h4 class="method-msi__text-title">
+                <div class="method-svan__text-wrapper">
+                  <h4 class="method-svan__text-title">
                     Карта энергии микросейсмического волнового поля для пластов
                     XXIII, XXIV
                   </h4>
-                  <p class="method-msi__description">
+                  <p class="method-svan__description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Autem vitae consequuntur, dolorum, est distinctio
                     accusantium voluptas neque quas quae alias magni odio
