--- a/technologies.html
+++ b/technologies.html
@@ -112,11 +112,14 @@
           <p class="technologies__text">
             Наше подразделение полевых сейсмических работ занимается сбором
             сейсморазведочных данных на суше и в транзитной зоне, для чего
-            используется целый комплекс источников сейсмических сигналов и
-            исследований. Наши мобильные сейсмопартии работают в каждой из
-            основных нефтегазоносных провинций России, в том числе в Западной и
-            Восточной Сибири, в Тимано-Печорской и Волго-Уральской провинциях, а
-            также в Казахстане, Узбекистане. <br />
+            используется автономные широкополосные чувствительные сейсмические
+            комплексы, измеряющие сигналы по трем компонентам X, Y, Z. Наши
+            мобильные сейсмопартии работают в каждой из основных нефтегазоносных
+            провинций России, в том числе в Западной и Восточной Сибири, на
+            острове Сахалиг, в Тимано-Печорской и Волго-Уральской провинциях, в
+            Восточно-Сибирской нефтегазоносной провинции, а также в Казахстане,
+            Узбекистане .
+            <br />
             <br />
 
             Большинство геологических задач решается при проведении сейсмических
@@ -126,15 +129,9 @@
             комплексов отечественного производства, не уступающего по своим
             техническим характеристикам зарубежным аналогам, является важным
             направлением в области геофизики и изучение недр. Нашей компанией
-            был разработан автономный сейсмический комплекс, не уступающий по
-            характеристикам современным зарубежным аналогам.
+            был разработан автономный сейсмический комплекс SG-3.1, не
+            уступающий по характеристикам зарубежным аналогам.
             <br />
-            <br />
-            Все измерения производятся многофункциональными сейсмическими
-            комплексами, представляющими из себя сейсмоприёмник и 24-разрядный
-            измерительный модуль, которые обеспечивают высокую чувствительность
-            регистрации сейсмосигнала и его аналого-цифровое преобразование
-            независимыми АЦП по трем ортогональным координатам.
           </p>
           <div class="technologies__images-wrapper">
             <img
@@ -161,15 +158,16 @@
             Обработка геофизических сигналов
           </h5>
           <p class="technologies__text">
-            Для первичной обработки используется программный комплекс,
-            разработанный в ООО «СИГМА». Трехмерное плотностное моделирование
-            (решение прямой и обратной задачи) осуществляется программным
-            обеспечением «?????» (Golden Software). Фильтрация, обнаружение
-            слабых аномалий, классификация и распознавание комплексных аномалий,
-            2D и 3D моделирование, комплексирование с другими
-            геолого-геофизическими методами с использованием
-            вероятностно-статистического подхода производится при помощи
-            алгоритма, написанного ООО "СИГМА" на языке программирования Python.
+            Для обработки и интерпретации полевой геофизической информации
+            используется программные среды, разработанные специалистами ООО
+            «СИГМА». Для решения обратных кинематических задач используется
+            система полноволнового численного моделирования SeismicMod-3D
+            (собственная разработка). Фильтрация, обнаружение слабых аномалий,
+            классификация и распознавание комплексных аномалий, 2D и 3D
+            моделирование, комплексирование с другими геолого-геофизическими
+            методами с использованием вероятностно-статистического подхода
+            производится при помощи алгоритма, написанного ООО "СИГМА" в среде
+            разработки программирования Python.
           </p>
 
           <div class="technologies__images-wrapper">
@@ -304,7 +302,7 @@
       <nav class="mobile__nav">
         <a href="index.html" class="mobile__link">Главная</a>
         <a href="about-company.html" class="mobile__link">О компании</a>
-        <a href="#" class="mobile__link">Наши технологии</a>
+        <a href="technologies.html" class="mobile__link">Наши технологии</a>
         <a href="contacts.html" class="mobile__link">Контакты</a>
       </nav>
     </div>
