--- a/contacts.html
+++ b/contacts.html
@@ -160,7 +160,7 @@
               </div>
               <textarea
                 class="message contacts__message"
-                placeholder="Message"
+                placeholder="Ваше сообщение"
                 name="message"
               ></textarea>
               
@@ -274,7 +274,7 @@
       <nav class="mobile__nav">
         <a href="index.html" class="mobile__link">Главная</a>
         <a href="about-company.html" class="mobile__link">О компании</a>
-        <a href="method-msi.html" class="mobile__link">Наши технологии</a>
+        <a href="technologies.html" class="mobile__link">Наши технологии</a>
         <a href="contacts.html" class="mobile__link">Контакты</a>
       </nav>
     </div>
