--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -31,10 +32,11 @@
     <header class="header">
       <div class="header-container">
         <a href="index.html" class="header__link">
-          <img class="header__logo" src="img/logo-blue.svg" alt="logo" />
+          <img class="header__logo" src="img/logo-blue.svg" alt="logo"
+          data-aos="zoom-in-right" / >
         </a>
 
-        <nav class="navbar">
+        <nav class="navbar" data-aos="zoom-in-left">
           <ul class="navbar__list">
             <li class="navbar__item">
               <a href="index.html" class="navbar__link">Главная</a>
@@ -80,7 +82,9 @@
           <h1 class="hero__title">
             Сейсмический мониторинг нефтегазоносности геологических объектов
           </h1>
-          <span class="hero__span">Геофизическая компания, с 2014 года</span>
+          <span class="hero__span"
+            >Геофизическая компания, основанная в 2014 году</span
+          >
         </div>
       </div>
     </section>
@@ -90,9 +94,13 @@
       <div class="about-container">
         <div class="about__wrapper">
           <div class="about__image">
-            <img src="img/about-oilfield.png" alt="well" />
+            <img
+              src="img/about-oilfield.png"
+              alt="well"
+              data-aos="fade-down-right"
+            />
           </div>
-          <div class="about__description">
+          <div class="about__description" data-aos="fade-down-left">
             <h2 class="about__title">О НАС</h2>
 
             <p class="about__text">
@@ -115,7 +123,7 @@
     </section>
     <!--.about-->
 
-    <section class="subscribe" id="scene">
+    <section class="subscribe">
       <div class="subscribe-container" data-depth="0.2">
         <h3 class="subscribe__title">Мы всегда открыты к сотрудничеству!</h3>
         <a href="contacts.html" class="about__button">Связаться с нами</a>
@@ -127,7 +135,7 @@
       <h3 class="methods__title">Наши методы</h3>
 
       <!-- Slider main container -->
-      <div class="swiper-container methods-container">
+      <div class="swiper-container methods-container" data-aos="fade-right">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper methods-wrapper">
           <!-- Slides -->
@@ -179,9 +187,11 @@
               <img class="methods__image" src="img/method-svan.png" alt="" />
             </div>
             <div class="methods__text-wrapper">
-              <h4 class="methods__text-title">Мониторинг СВАН</h4>
+              <h4 class="methods__text-title">
+                Мониторинг спектрально-волнового анализа
+              </h4>
               <p class="methods__text">
-                Спектрально-волновой анализ (СВАН) дает возможность оценки
+                Спектрально-временной анализ (СВАН) дает возможность оценки
                 положения внешнего контура ВНК, провести детализацию
                 геологического строения, а также пространственное распределение
                 фильтрационно-емкостных свойств продуктивных зон залежей.
@@ -448,6 +458,10 @@
     <script src="js/swiper-bundle.min.js "></script>
     <script src="js/jquery-3.5.1.min.js "></script>
     <script src="js/jquery.validate.min.js "></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="js/main.js "></script>
   </body>
 </html>
