fixed: fixed sections after deploy

--- a/method-svan.html
+++ b/method-svan.html
@@ -110,7 +110,7 @@
         </p>
         <div class="method-svan__image-wrapper">
           <img
-            class="method-svan__spectrums"
+            class="method-svan__spectrums method-svan__spectrums--first"
             src="img/msi-method__1.jpg"
             alt=""
           />
@@ -139,7 +139,7 @@
           их интерференция приводит к формированию стоячих волн.
         </p>
         <div class="method-svan__image-wrapper">
-          <img class="method-__gif" src="img/Standing_wave_2.gif" alt="" />
+          <img class="method-svan__gif" src="img/Standing_wave_2.gif" alt="" />
         </div>
         <span class="method-svan__comment"
           >Пример стоячей волны (черная линия)</span
@@ -332,7 +332,7 @@
                   <div class="footer__item-wrapper">
                     <img src="img/map-icon.svg " class="footer__icon" alt=" " />
                   </div>
-                  ООО «СИГМА», а/я 26, 420073, г. Казань, ул. Аделя Кутуя, д.46
+                  ООО «СИГМА», 420073, г. Казань, ул. Аделя Кутуя, д.46
                 </li>
                 <li class="footer__item">
                   <div class="footer__item-wrapper">
