--- a/technologies.html
+++ b/technologies.html
@@ -261,7 +261,7 @@
                   <div class="footer__item-wrapper">
                     <img src="img/map-icon.svg " class="footer__icon" alt=" " />
                   </div>
-                  ООО «СИГМА», а/я 26, 420073, г. Казань, ул. Аделя Кутуя, д.46
+                  ООО «СИГМА», 420073, г. Казань, ул. Аделя Кутуя, д.46
                 </li>
                 <li class="footer__item">
                   <div class="footer__item-wrapper">
