fix: fixed section method-grp

--- a/method-grp_sat.html
+++ b/method-grp_sat.html
@@ -219,13 +219,17 @@
                     Микросейсмические события для основного ГРП
                   </h4>
                   <p class="method-grp__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Autem vitae consequuntur, dolorum, est distinctio
-                    accusantium voluptas neque quas quae alias magni odio
-                    corporis at delectus hic dolores repellat, ab voluptate
-                    explicabo recusandae! Reiciendis id sequi recusandae beatae
-                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
-                    fugit impedit inventore!
+                    По окончании обработки ГРП строятся: <br />
+                    <br />
+                    - карта плотности сейсмической эмиссии; <br />
+                    - пространственное распределение интенсивностей эпицентров
+                    зарегистрированных событий; <br />
+                    - вертикальный разрез облака плотности сейсмической эмиссии
+                    вдоль преобладающего направления распространения
+                    гидравлической трещины ГРП; <br />
+                    - сопоставление графиков давления НКТ и призабойной
+                    концентрации проппанта с распределением регистрируемых
+                    событий во времени.
                   </p>
                 </div>
               </div>
@@ -242,67 +246,28 @@
                     Микросейсмические события для основного ГРП
                   </h4>
                   <p class="method-grp__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Autem vitae consequuntur, dolorum, est distinctio
-                    accusantium voluptas neque quas quae alias magni odio
-                    corporis at delectus hic dolores repellat, ab voluptate
-                    explicabo recusandae! Reiciendis id sequi recusandae beatae
-                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
-                    fugit impedit inventore!
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide method-grp__slide">
-                <div class="method-grp__images">
-                  <img
-                    class="method-grp__image"
-                    src="img/grp-method__swiper-3.png"
-                    alt=""
-                  />
-                </div>
-                <div class="method-grp__text-wrapper">
-                  <h4 class="method-grp__text-title">
-                    Микросейсмические события для основного ГРП
-                  </h4>
-                  <p class="method-grp__description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Autem vitae consequuntur, dolorum, est distinctio
-                    accusantium voluptas neque quas quae alias magni odio
-                    corporis at delectus hic dolores repellat, ab voluptate
-                    explicabo recusandae! Reiciendis id sequi recusandae beatae
-                    nesciunt quis rem aut velit voluptatem veniam ab nemo quod,
-                    fugit impedit inventore!
-                  </p>
-                </div>
-              </div>
-              <div class="swiper-slide method-grp__slide">
-                <div class="method-grp__images">
-                  <img
-                    class="method-grp__image"
-                    src="img/grp-method__swiper-4.png"
-                    alt=""
-                  />
-                </div>
-                <div class="method-grp__text-wrapper">
-                  <h4 class="method-grp__text-title">
-                    Выделение естественной трещиноватости по результатам
-                    мониторинга САТ
-                  </h4>
-                  <p class="method-grp__description">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Dolor qui nesciunt placeat iste illum, ea et similique
-                    architecto asperiores! Voluptates reprehenderit magni est
-                    nostrum impedit totam error repellendus voluptatem placeat
-                    quidem veritatis voluptas vel doloremque vero ex officia,
-                    qui facilis asperiores laudantium! Veniam maxime molestiae
-                    cupiditate, asperiores consequatur quis veritatis!
+                    На стадии интерпретации результатов материалов ГРП
+                    выделяется техногенная трещиноватость, возникающей
+                    непосредственно в результате ГРП. Однако в процессе
+                    формирования трещины ГРП происходит и конкурентная активация
+                    существующих систем естественных трещин, пример которой
+                    представлен на слайде. Увеличение объема закачки приводит к
+                    большему пространственному охвату области реактивации
+                    существующих трещин. Результаты наземных сейсмических
+                    исследований показали логически понятную последовательность
+                    развития сейсмических событий вследствие закачки флюида в
+                    пласт: равномерное распространение поля воздействия на
+                    пластовую воду и породу на начальном этапе по зоне
+                    разуплотнения, а затем, после преодоления порога прочности
+                    породы, зона развития сейсмической эмиссии стала развиваться
+                    вокруг скважины, в которую производилась закачка.
                   </p>
                 </div>
               </div>
             </div>
 
             <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
+            <!-- <div class="swiper-pagination"></div> -->
           </div>
         </div>
       </div>
